--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -55,31 +55,33 @@ Alla cortese attenzione dei committenti :
 \end{list}
 
 Con la presente la ditta WebShape consegna il materiale necessario a sostenere la Revisione di Accettazione. \\
-In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Qualifica. Si allega inoltre il prodotto software finale, comprensivo di sorgenti, test e di due file \textit{war} per l'installazione del prodotto.
+In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Qualifica. Si allega inoltre il prodotto software finale, comprensivo di sorgenti, test e di due file \textit{war} necessari all'installazione del prodotto.
 
 
 \section{Materiale consegnato}
 Per la Revisione di Accettazione si consegna il seguente materiale: 
-\subsection{Documenti interni}
-\begin{list}{-}{}
-\item Norme di progetto (NormeDiProgetto3.0.pdf)
-\end{list}
 \subsection{Documenti esterni}
 \begin{list}{-}{}
-\item Analisi dei requisiti (AnalisiDeiRequisiti3.0.pdf)
 \item Definizione di prodotto (DefinizioneDiProdotto2.0.pdf)
-\item Diagramma di Gantt per le attivit\`a (Pianifica.png)
-\item Diagramma di Gantt per le risorse (PianificaRisorse.png)
-\item Glossario (Glossario3.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
 \item Manuale utente (ManualeUtente2.0.pdf)
 \item Piano di progetto (PianoDiProgetto4.0.pdf)
 \item Piano di qualifica (PianoDiQualifica4.0.pdf)
-\item Specifica tecnica (SpecificaTecnica2.0.pdf)
 \end{list}
 \subsection{Codice sorgente}
 \begin{list}{-}{}
-\item Codice sorgente e test (ajaxdraw.tar.gz)
+\item Codice sorgente e test: directory AJAXDRAW.
 \end{list}
+\subsection{Binari}
+\begin{list}{-}{}
+\item File \textit{war} per GNU/Linux: linux/AJAXDRAW.war
+\item File \textit{war} per Windows: windows/AJAXDRAW.war
+\end{list}
+\subsection{Dipendenze}
+\begin{list}{-}{}
+\item Apache Tomcat: dipendenze/apache-tomcat-6.0.18.tar.gz
+\item Apache Tomcat, programma di installazione per Windows: dipendenze/apache-tomcat-6.0.18.exe
+\end{list}
+
 
 \end{document}
