MU:piccole mod.

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -170,7 +170,9 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
           2.0 & 20/03/09 Preparazione in vista RA & Carollo Mirko \\
           \hline
-          1.1 & 20/03/09 Aggiunta funzione cambiamento di livello & Rizzo Maurizio \\
+          1.2 & 20/03/09 Descrizioni particolari Opera e IE & Rizzo Maurizio \\
+          \hline         
+          1.1 & 19/03/09 Aggiunta funzione cambiamento di livello & Rizzo Maurizio \\
           \hline
           1.0 & 07/03/09 Preparazione in vista rilascio RQ & Dal Bosco Davide \\
           \hline
@@ -240,7 +242,7 @@ Il prodotto \`e stato sviluppato come un'applicazione web. \`E possibile utilizz
  \item[-]   Opera 9.5 o superiore; 
  \item[-]   Google Chrome 1.0 o superiore; 
  \item[-]   Safari 3.2 o superiore; 
- \item[-]   Internet Explorer 7 o superiore;
+ \item[-]   Internet Explorer 8;
  \item[-]   Risoluzione minima consigliata: 1024x768 pixels.
 \end{elencopuntato}
 \textbf{N.B.} Alcune funzionalit\`a avanzate, come il cambiamento del tipo di carattere di una casella di testo, sono attualmente supportate solamente dalle versioni non stabili dei succitati browsers; saranno pertanto disabilitate nel caso non siano disponibili.
@@ -268,7 +270,7 @@ Il prodotto \`e stato sviluppato come un'applicazione web. \`E possibile utilizz
 \end{figure} 
 
 \item[-]  Internet Explorer richiede invece l'installazione del plugin Microsoft\textcopyright   \href{http://silverlight.net/GetStarted/}{Silverlight \texttrademark} 
-per funzionare. Il programma \`e compatibile con le versioni 7 e 8 del browser, salvo alcuni problemi con lo spostamento dell'area di visualizzazione e lo zoom, e altri di piccola entit\` a. 
+per funzionare. Il programma \`e compatibile con la versione 8 del browser (in modalit\` a browser \textit{IE8} e documento \textit{standard IE8}, oppure in modalit\` a browser \textit{IE7} e documento \textit{standard IE7}, tutto attivabile tramite la pressione del tasto F12 per l'accesso agli strumenti di sviluppo integrati nella nuova versione), salvo alcuni problemi con lo spostamento dell'area di visualizzazione e lo zoom, e altri di piccola entit\` a, dovuti principalmente allo stato preliminare della libreria utilizzata da Explorer per la resa del canvas in oggetto.
 \end{elencopuntato}
 \subsubsezione{Lato server}
 Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: \textit{Apache Tomcat}. 
